Fixed login and register page alignments

--- a/Client/src/css/form.css
+++ b/Client/src/css/form.css
@@ -39,9 +39,8 @@
   padding: 20px;
   padding-bottom: 50px;
   gap: 5px;
-
   width: 45%;
-  height: 530px;
+  height: 700px;
 
   text-align: center;
 }
@@ -61,7 +60,7 @@
 }
 
 .sign-up-text {
-  margin-bottom: 0px;
+  margin-top: -80px;
 }
 .red {
   color: white;
@@ -73,8 +72,12 @@
 
 .googlebtn {
   width: 200px;
-  margin-left: -.5px;
+  margin-left: -0.5px;
   margin-top: 110px;
   margin-bottom: -250px;
   /* margin-bottom: 30px;  */
+}
+
+.already-have-an-account {
+  margin-top: -50px;
 }
